k8s/backend_proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-proxy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend-proxy-server
  template:
    metadata:
      labels:
        component: backend-proxy-server
    spec:
      containers:
        - name: backend-proxy
          image: d0rka/authentication-service-backend-proxy
          ports:
            - containerPort: 3000
