k8s/test-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: test-frontend-web
  template:
    metadata:
      labels:
        component: test-frontend-web
    spec:
      containers:
        -
          name: frontend
          image: d0rka/authentication-service-test-frontend
          ports:
            -
              containerPort: 3001
