k8s/backend_proxy-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-proxy-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: backend-proxy-server
  ports:
    - port: 3000
      targetPort: 3000
