k8s/test-backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: test-backend
  ports:
    - port: 3000
      targetPort: 3000
