k8s/test-frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: test-frontend-web
  ports:
    -
      port: 3001
      targetPort: 3001
