k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    -
      http:
        paths:
          -
            path: /
            backend:
              serviceName: frontend-cluster-ip-service
              servicePort: 3001
          -
            path: /api/
            backend:
              serviceName: backend-proxy-cluster-ip-service
              servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-main-frontend-mf
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    -
      http:
        paths:
          -
            path: /main_app_mf(/|$)(.*)
            backend:
              serviceName: test-frontend-cluster-ip-service
              servicePort: 3001
